<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="554dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="photo"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="Name:"/>

            <EditText
                android:id="@+id/content_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/id1"
                android:layout_width="wrap_content"
                android:layout_height="42dp"

                android:text="astro"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <ImageView
                android:id="@+id/image1"
                android:layout_width="67dp"
                android:layout_height="30dp"/>

            <RadioButton
                android:id="@+id/id2"
                android:layout_width="122dp"
                android:layout_height="30dp"
                android:text="academic"/>

            <ImageView
                android:id="@+id/image2"
                android:layout_width="67dp"
                android:layout_height="30dp"/>

            <RadioButton
                android:id="@+id/id3"
                android:layout_width="128dp"
                android:layout_height="36dp"
                android:text="motor racing"/>

            <ImageView
                android:id="@+id/image3"
                android:layout_width="67dp"
                android:layout_height="30dp"/>

            <RadioButton
                android:id="@+id/id4"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="party"/>

            <ImageView
                android:id="@+id/image4"
                android:layout_width="67dp"
                android:layout_height="30dp"/>
        </RadioGroup>

    </LinearLayout>


</LinearLayout>


